build_output.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
/app/app/src/main/java/iglesia/jerusalem/hermosa/RadioService.java:119: error: cannot find symbol
                 return Futures.immediateFuture(LibraryResult.of(
                                                             ^
  symbol:   method of(ImmutableList<MediaItem>,LibraryParams,int)
  location: class LibraryResult
/app/app/src/main/java/iglesia/jerusalem/hermosa/RadioService.java:125: error: cannot find symbol
            return Futures.immediateFuture(LibraryResult.of(
                                                        ^
  symbol:   method of(ImmutableList<Object>,LibraryParams,int)
  location: class LibraryResult
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 2s
15 actionable tasks: 1 executed, 14 up-to-date
